--- a/source/notebooks/L3/alternate-nearest-neighbour.ipynb
+++ b/source/notebooks/L3/alternate-nearest-neighbour.ipynb
@@ -773,7 +773,9 @@
     "\n",
     "**TAKE NOTE**\n",
     "\n",
-    "- Here is the function that works. Perhaps more effectively.\n",
+    "- Here is a function that works. It implements `scipy.spatial`'s `cKDTree` and does not require a `MultiPoint`. It uses a `shapely.Point` `geometry` directly and is perhaps more effective than python `.nearest_points`.\n",
+    "    \n",
+    "- I should infact create a more thorough `function` to clean up the `returned` gdf and prevent repetition but want to move on.\n",
     "\n",
     "</div>"
    ]
@@ -784,6 +786,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make a copy of the working gdf \n",
+    "\n",
     "df1_copy = gpd.GeoDataFrame()\n",
     "df1_copy = df1.copy()"
    ]
@@ -889,6 +893,8 @@
     }
    ],
    "source": [
+    "# rename columns and convert the centroid to the geometry\n",
+    "\n",
     "df1_copy.rename(columns={'geometry':'poly_geom'},inplace=True)\n",
     "df1_copy.rename(columns={'centroid':'geometry'},inplace=True)\n",
     "df1_copy.head()"
@@ -900,17 +906,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import numpy and cKDTree\n",
     "import numpy as np\n",
     "from scipy.spatial import cKDTree\n",
     "\n",
     "def ckdnearest(gdA, gdB):\n",
+    "    '''Define a function that accepts two shapely.Point geometery GeoDataFrames (gdf) and returns a\n",
+    "    merged gdf that aligns the two and adds a new column: a distance to nearest'''\n",
+    "    \n",
+    "    #numpy array to harvet coordinate (x y) values\n",
     "    nA = np.array(list(zip(gdA.geometry.x, gdA.geometry.y)) )\n",
     "    nB = np.array(list(zip(gdB.geometry.x, gdB.geometry.y)) )\n",
+    "    \n",
+    "    #cKDTree to determine distance at index\n",
     "    btree = cKDTree(nB)\n",
     "    dist, idx = btree.query(nA, k=1)\n",
+    "    \n",
+    "    #create new gdf through merging the given two and add a new colunm distance\n",
     "    gdf = pd.concat(\n",
     "        [gdA.reset_index(drop=True), gdB.loc[idx, gdB.columns != 'geometry'].reset_index(drop=True),\n",
     "         pd.Series(dist, name='dist')], axis=1)\n",
+    "    \n",
+    "    #return the gdf\n",
     "    return gdf"
    ]
   },
